~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.3 version:

* postgresql-setup creates correct 'log_directory' based on PG version
  (the default changed from $datadir/pg_log to $datadir/log in v10).

* Modular PostgreSQL builds can provide/depend on
  postgresql-server(:MODULE_COMPAT_11<some_suffix>) instead of
  postgresql-server(:MODULE_COMPAT_11) to avoid clash with non-modular
  builds.

* Fixed ExecStart= statement in systemd's service files for Software
  Collections where we need to first do `source scl_source COLLECTION ;`
  before we execute postmaster.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.2 version:

* %postgresql_tests_* macros now use random port for the test PostgreSQL
  server.  This helps in Koji build system where multiple builds of the
  same package can happen concurrently on one host and using the same
  port would make random build failures.

* If the testing server fails, the %postgresql_tests_* macros print the
  error log out for easier debugging.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.1 version:

* Split testing RPM macros into two files;  one is related to build-time
  _testing_ against postgresql server, second is related to building against
  postgresql server (building server modules).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 8.0 version:

* PostgreSQL on systems with systemd are now configured with
  --with-systemd, which simplifies the start/stop handling (we can
  stop shipping postgresql-ctl wrapper, e.g.).

* systemd service doesn't have the artificial timeout for PostgreSQL
  server start/stop (was 10 minutes before).

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 7.0 version:

* RPM macros file works with SCLs, too.

* New convenience RPM macro %postgresql_module_requires.
